--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ReactApp</string>
+
+    <!-- app公有存储目录 -->
+    <string name="app_storage_directory">BuddiesReactApp</string>
 </resources>
